--- a/locale/zh/platforms.json
+++ b/locale/zh/platforms.json
@@ -1,153 +1,176 @@
 {
   "platforms": {
-    "title": "AI模型平台",
-    "subtitle": "对比并发现最适合您需求的AI平台",
+    "title": "AI 平台",
+    "subtitle": "比较并发现最适合您需求的 AI 平台",
     "searchPlaceholder": "搜索平台...",
+    "pageDescription": "探索 Model Guru 追踪的 AI 模型平台，包括 Replicate、Hugging Face 和 Stability AI。",
     "categories": {
-      "title": "按类别浏览平台",
-      "subtitle": "根据平台的主要功能或专长领域查找合适的平台",
+      "title": "按类别探索平台",
+      "subtitle": "根据主要功能或专业领域查找平台。",
       "modelHosting": {
         "title": "模型托管",
-        "description": "提供AI模型API服务的专业平台"
+        "description": "通过 API 托管和提供 AI 模型的平台。"
       },
       "developmentTools": {
         "title": "开发工具",
-        "description": "用于构建和训练模型的专业工具和环境"
+        "description": "用于构建和训练模型的工具和环境。"
       },
       "cloudServices": {
         "title": "云服务",
-        "description": "提供全面机器学习基础设施的云服务商"
+        "description": "提供全面 ML 基础设施的云服务提供商。"
       }
     },
     "comparison": {
-      "title": "平台对比",
-      "subtitle": "对比各大AI平台的核心功能",
-      "headers": {
-        "feature": "功能",
-        "replicate": "Replicate",
-        "huggingFace": "Hugging Face",
-        "stabilityAI": "Stability AI",
-        "openAI": "OpenAI"
-      },
-      "rows": {
-        "modelTypes": {
-          "label": "模型类型",
-          "replicate": "多种类型",
-          "huggingFace": "多种类型",
-          "stabilityAI": "图像/视频",
-          "openAI": "文本/图像"
-        },
-        "apiAccess": {
-          "label": "API访问",
-          "replicate": "支持",
-          "huggingFace": "支持",
-          "stabilityAI": "支持",
-          "openAI": "支持"
-        },
-        "pricingModel": {
-          "label": "计费模式",
-          "replicate": "按量付费",
-          "huggingFace": "免费/付费",
-          "stabilityAI": "订阅制",
-          "openAI": "按量付费"
-        },
-        "customModels": {
-          "label": "自定义模型",
-          "replicate": "支持",
-          "huggingFace": "支持",
-          "stabilityAI": "不支持",
-          "openAI": "有限支持"
-        }
-      }
-    },
-    "details": {
+      "title": "平台比较",
+      "subtitle": "比较不同平台的关键特性。",
+      "features": "特性",
+      "replicate": "Replicate",
+      "huggingFace": "Hugging Face",
+      "openAI": "OpenAI",
+      "modelTypes": "模型类型",
+      "apiAccess": "API 访问",
+      "pricing": "定价模式",
+      "customModels": "自定义模型",
       "replicate": {
-        "name": "Replicate",
-        "description": "Replicate让云端运行机器学习模型变得简单高效。只需几行代码即可部署模型，并实现自动扩展。",
-        "metrics": {
-          "models": "500+",
-          "runs": "1000万+",
-          "users": "5万+"
-        },
-        "features": "核心优势",
-        "featuresList": [
-          "便捷的模型部署",
-          "自动扩展能力",
-          "按量计费模式",
-          "完整API支持"
-        ]
+        "modelTypes": "图像、视频、音频",
+        "apiAccess": "REST API",
+        "pricing": "按使用付费",
+        "customModels": "支持"
       },
       "huggingFace": {
-        "name": "Hugging Face",
-        "description": "Hugging Face是构建AI未来的开源社区。支持构建、训练和部署由开源机器学习技术驱动的前沿模型。",
+        "modelTypes": "所有类型",
+        "apiAccess": "REST API、Python SDK",
+        "pricing": "免费 + 按使用付费",
+        "customModels": "支持"
+      },
+      "openAI": {
+        "modelTypes": "文本、图像",
+        "apiAccess": "REST API",
+        "pricing": "按使用付费",
+        "customModels": "不支持"
+      }
+    },
+    "platformCard": {
+      "metrics": {
+        "models": "模型数量",
+        "deployments": "部署次数",
+        "datasets": "数据集数量"
+      },
+      "features": {
+        "title": "主要特性"
+      },
+      "actions": {
+        "viewDetails": "查看详情",
+        "compare": "比较"
+      },
+      "replicate": {
+        "title": "Replicate",
+        "description": "通过简单的 API 部署和运行 AI 模型",
+        "metrics": {
+          "models": "1000+",
+          "deployments": "5000+"
+        },
+        "features": {
+          "oneClick": "一键部署",
+          "scaling": "自动扩展",
+          "monitoring": "内置监控"
+        }
+      },
+      "huggingFace": {
+        "title": "Hugging Face",
+        "description": "AI 社区的家园，提供模型、数据集和应用程序",
         "metrics": {
           "models": "10万+",
-          "datasets": "100万+",
-          "users": "50万+"
+          "datasets": "1万+"
         },
-        "features": "核心优势",
-        "featuresList": [
-          "丰富的开源模型",
-          "完善的模型中心",
-          "高效的推理API",
-          "便捷的演示空间"
-        ]
+        "features": {
+          "modelHub": "模型中心",
+          "spaces": "演示空间",
+          "inference": "推理 API"
+        }
       }
     },
     "submitPlatform": {
       "title": "提交您的平台",
-      "subtitle": "在Model Guru上展示您的AI平台，接触成千上万的潜在用户",
+      "subtitle": "将您的 AI 平台列入 Model Guru，触达数千潜在用户",
       "benefits": {
-        "title": "平台展示的优势",
-        "items": {
-          "visibility": {
-            "title": "提升曝光度",
-            "description": "接触成千上万正在寻找AI解决方案的工程师、数据科学家和开发者。"
-          },
-          "traffic": {
-            "title": "精准流量",
-            "description": "吸引对AI技术有明确需求的高质量访问者。"
-          },
-          "insights": {
-            "title": "数据洞察",
-            "description": "获取用户如何发现和使用您平台的匿名分析数据。"
-          },
-          "integration": {
-            "title": "合作机会",
-            "description": "探索与Model Guru深度整合和战略合作的可能性。"
-          }
+        "title": "平台列出的好处",
+        "visibility": {
+          "title": "提升可见度",
+          "description": "触达数千名正在寻找类似平台的 AI 工程师、数据科学家和开发者。"
+        },
+        "traffic": {
+          "title": "精准流量",
+          "description": "吸引对 AI 解决方案感兴趣的高度目标用户访问您的平台。"
+        },
+        "insights": {
+          "title": "性能洞察",
+          "description": "获取关于用户如何发现和与您的平台互动的匿名数据。"
+        },
+        "integration": {
+          "title": "集成机会",
+          "description": "与 Model Guru 进行更深层次集成和合作的机会。"
         }
       },
+      "showFormButton": "提交您的平台",
       "form": {
-        "title": "平台信息",
-        "platformName": "平台名称",
-        "websiteUrl": "网站地址",
-        "urlPlaceholder": "https://your-platform.com",
-        "category": "类别",
-        "categoryOptions": {
-          "select": "请选择类别",
-          "modelHosting": "模型托管",
-          "developmentTools": "开发工具",
-          "cloudServices": "云服务",
-          "trainingPlatforms": "训练平台",
-          "specializedAI": "专业AI服务",
-          "other": "其他(请说明)"
+        "title": "平台详情",
+        "metrics": {
+          "title": "指标与特性"
         },
-        "description": "平台描述",
-        "descriptionPlaceholder": "请描述您的平台及其主要特点(最多500字)",
-        "metricsTitle": "数据与功能",
-        "modelsCount": "模型数量",
-        "usersCount": "用户数量",
-        "keyFeatures": "核心功能(逗号分隔)",
-        "featuresPlaceholder": "例如：API接口、自定义模型、免费版本",
-        "logo": "平台标志",
-        "logoNote": "建议：方形标志，最小200x200像素(推荐PNG或SVG格式)",
-        "contactTitle": "联系方式",
-        "contactName": "联系人",
-        "contactEmail": "联系邮箱",
-        "termsAgree": "我同意平台展示的条款和条件",
-        "submit": "提交平台",
-        "requiredNote": "* 必填项。所有提交内容将经过审核后发布，通常需要3-5个工作日。"
+        "contact": {
+          "title": "联系信息"
+        },
+        "fields": {
+          "name": {
+            "label": "平台名称"
+          },
+          "url": {
+            "label": "网站 URL",
+            "placeholder": "https://您的平台.com"
+          },
+          "category": {
+            "label": "类别",
+            "placeholder": "选择类别",
+            "options": {
+              "modelHosting": "模型托管",
+              "developmentTools": "开发工具",
+              "cloudServices": "云服务",
+              "trainingPlatforms": "训练平台",
+              "specializedAI": "专业 AI 服务",
+              "other": "其他（请说明）"
+            }
+          },
+          "description": {
+            "label": "描述",
+            "placeholder": "请描述您的平台及其主要特性（最多 500 字）"
+          },
+          "models": {
+            "label": "模型数量"
+          },
+          "users": {
+            "label": "用户数量"
+          },
+          "features": {
+            "label": "主要特性（用逗号分隔）",
+            "placeholder": "例如：API 访问、自定义模型、免费层级"
+          },
+          "logo": {
+            "label": "平台标志",
+            "note": "建议：正方形标志，最小 200x200 像素（推荐 PNG 或 SVG 格式）"
+          },
+          "contactName": {
+            "label": "联系人姓名"
+          },
+          "contactEmail": {
+            "label": "联系人邮箱"
+          },
+          "terms": {
+            "label": "我同意平台列出的条款和条件"
+          }
+        },
+        "submitButton": "提交平台",
+        "note": "* 必填字段。所有提交将在发布前进行审核。通常需要 3-5 个工作日。"
       }
     },
     "newsletter": {
@@ -160,6 +183,61 @@
     "cta": {
       "visitPlatform": "访问平台",
       "viewModels": "查看模型"
+    },
+    "platformDetails": {
+      "replicate": {
+        "title": "Replicate",
+        "description": "Replicate 让在云端运行机器学习模型变得简单。只需几行代码即可部署模型，并自动扩展。",
+        "metrics": {
+          "models": "模型数量",
+          "runs": "运行次数",
+          "users": "用户数量"
+        },
+        "features": {
+          "title": "核心特性",
+          "easyDeployment": "简单的模型部署",
+          "autoScaling": "自动扩展",
+          "payPerUse": "按使用付费",
+          "apiAccess": "API 访问"
+        },
+        "cta": {
+          "visit": "访问平台",
+          "viewModels": "查看模型"
+        }
+      },
+      "huggingface": {
+        "title": "Hugging Face",
+        "description": "Hugging Face 是构建未来的 AI 社区。构建、训练和部署由机器学习开源参考提供支持的最先进模型。",
+        "metrics": {
+          "models": "模型数量",
+          "datasets": "数据集数量",
+          "users": "用户数量"
+        }
+      }
+    },
+    "submission": {
+      "title": "提交您的平台",
+      "description": "将您的 AI 平台添加到我们的目录中",
+      "form": {
+        "platformName": "平台名称",
+        "platformUrl": "平台网址",
+        "category": "类别",
+        "description": "描述",
+        "metrics": {
+          "title": "指标与特性",
+          "models": "模型数量",
+          "users": "用户数量",
+          "features": "核心特性（用逗号分隔）"
+        },
+        "contact": {
+          "title": "联系方式",
+          "name": "联系人姓名",
+          "email": "联系邮箱"
+        },
+        "terms": "我同意平台列表的条款和条件",
+        "submit": "提交平台",
+        "note": "* 必填项。所有提交内容将在发布前进行审核，通常需要 3-5 个工作日。"
+      }
     }
   }
 } 
