--- a/locale/en/faq.json
+++ b/locale/en/faq.json
@@ -1,75 +1,84 @@
 {
   "faq": {
-    "pageTitle": "Frequently Asked Questions - Model Guru",
-    "pageDescription": "Find answers to common questions about Model Guru, including data collection, features, premium access, and platform suggestions.",
-    "heroTitle": "Have Questions? We've Got Answers!",
-    "heroSubtitle": "Find answers to frequently asked questions about Model Guru.",
-    "searchPlaceholder": "Search FAQ...",
+    "title": "Frequently Asked Questions",
+    "subtitle": "Find answers to common questions about Model Guru",
+    "pageDescription": "Explore our comprehensive FAQ section to find answers to the most common questions about our platform, services, and features.",
+    "searchPlaceholder": "Search FAQs...",
     "categories": {
-      "general": "General",
-      "data": "Data & Methodology",
-      "features": "Features & Usage",
-      "premium": "Premium Access",
-      "community": "Community & Suggestions"
+      "title": "Categories",
+      "general": "General Questions",
+      "account": "Account & Access",
+      "models": "AI Models",
+      "platforms": "Platforms",
+      "reports": "Reports & Analysis",
+      "technical": "Technical Support"
     },
     "questions": {
       "general": {
-        "whatIsMg": {
-          "q": "What is Model Guru?",
-          "a": "Model Guru is a platform dedicated to discovering, tracking, and analyzing AI/ML models across various platforms. We provide consolidated metrics, trend analysis, and tools to help developers, researchers, and businesses make informed decisions about AI models."
+        "whatIsModelGuru": {
+          "question": "What is Model Guru?",
+          "answer": "Model Guru is a comprehensive platform for discovering, comparing, and implementing AI models. We provide detailed information about various AI models, their capabilities, and how to use them effectively."
         },
         "whoIsItFor": {
-          "q": "Who is Model Guru for?",
-          "a": "Model Guru is designed for anyone working with or interested in AI models, including AI engineers, data scientists, researchers, product managers, and business leaders who need to stay updated on the rapidly evolving AI landscape."
+          "question": "Who is Model Guru for?",
+          "answer": "Model Guru is designed for AI enthusiasts, developers, researchers, and businesses looking to leverage AI models. Whether you're a beginner or an expert, our platform provides valuable insights and resources."
         }
       },
-      "data": {
-        "howCollectData": {
-          "q": "How does Model Guru collect model data?",
-          "a": "We aggregate data from publicly available APIs and information provided by various platforms like Hugging Face, Replicate, etc. We strive to keep our data updated regularly to ensure accuracy and timeliness. For more details, please see our <a href=\"methodology.html\">Methodology</a> page."
+      "account": {
+        "createAccount": {
+          "question": "How do I create an account?",
+          "answer": "You can create an account by clicking the 'Sign Up' button in the top right corner. You'll need to provide your email address and create a password."
         },
-        "howOftenUpdate": {
-          "q": "How often is the data updated?",
-          "a": "We aim to update our core data daily to provide the latest information on model popularity, runs, and new additions across the platforms we track."
-        },
-        "accuracy": {
-          "q": "How accurate is the data?",
-          "a": "We rely on data provided by the platforms themselves. While we strive for accuracy, discrepancies can occasionally occur due to changes in platform APIs or reporting methods. We continuously work to improve our data collection and verification processes."
+        "resetPassword": {
+          "question": "How do I reset my password?",
+          "answer": "Click on 'Forgot Password' on the login page, enter your email address, and follow the instructions sent to your email."
         }
       },
-      "features": {
-        "apiAccess": {
-          "q": "Does Model Guru offer API access?",
-          "a": "Currently, we do not offer public API access. However, API access is a planned feature for our premium users in the future. If this is critical for you, please <a href=\"mailto:support@modelguru.deepseek.diy\">contact us</a> to discuss your needs."
+      "models": {
+        "findModels": {
+          "question": "How do I find specific AI models?",
+          "answer": "You can use our search function, browse by categories, or use filters to find specific models. Each model has detailed information about its capabilities and use cases."
         },
         "compareModels": {
-          "q": "How can I compare models?",
-          "a": "You can use our Model Comparison tool (available on the 'All Models' page or as a dedicated feature for premium users) to select and compare models side-by-side based on various metrics and features."
+          "question": "Can I compare different AI models?",
+          "answer": "Yes, you can compare up to 3 models at a time using our comparison tool. This helps you make informed decisions about which model best suits your needs."
         }
       },
-      "premium": {
-        "premiumBenefits": {
-          "q": "What are the benefits of a Premium subscription?",
-          "a": "Premium users get access to advanced features like detailed reports (daily, weekly, monthly), in-depth analytics, customizable dashboards, potentially API access in the future, and priority support. Visit our <a href=\"reports.html\">Reports</a> page for more details on premium offerings."
+      "platforms": {
+        "platformInfo": {
+          "question": "What information is available about AI platforms?",
+          "answer": "We provide comprehensive information about various AI platforms, including pricing, features, supported models, and user reviews."
         },
-        "howToUpgrade": {
-          "q": "How do I upgrade to Premium?",
-          "a": "You can upgrade to a premium plan directly from the <a href=\"reports.html\">Reports</a> page by selecting either the Monthly or Annual subscription option."
+        "platformComparison": {
+          "question": "How can I compare different AI platforms?",
+          "answer": "Use our platform comparison tool to evaluate different platforms based on features, pricing, and user ratings."
         }
       },
-      "community": {
-        "suggestPlatform": {
-          "q": "Can I suggest a new platform or model to track?",
-          "a": "Absolutely! We are always looking to expand our coverage and value community input. Please use the <a href=\"platforms.html#submit-platform\">Submit Platform</a> form or <a href=\"mailto:support@modelguru.deepseek.diy\">contact us</a> directly with your suggestions for new platforms or specific models you'd like to see."
+      "reports": {
+        "accessReports": {
+          "question": "How do I access analysis reports?",
+          "answer": "Analysis reports are available to registered users. You can access them through the Reports section of your dashboard."
         },
-        "reportIssue": {
-          "q": "How can I report an issue or provide feedback?",
-          "a": "We appreciate your feedback! You can report data inaccuracies, bugs, or provide general feedback by contacting us at <a href=\"mailto:support@modelguru.deepseek.diy\">support@modelguru.deepseek.diy</a>."
+        "reportUpdates": {
+          "question": "How often are reports updated?",
+          "answer": "Reports are updated monthly to reflect the latest developments in the AI model landscape."
+        }
+      },
+      "technical": {
+        "browserSupport": {
+          "question": "Which browsers are supported?",
+          "answer": "Model Guru supports all modern browsers including Chrome, Firefox, Safari, and Edge. We recommend using the latest version for the best experience."
+        },
+        "mobileAccess": {
+          "question": "Can I access Model Guru on mobile devices?",
+          "answer": "Yes, our platform is fully responsive and works on all mobile devices. We also offer a mobile app for iOS and Android."
         }
       }
     },
-    "stillHaveQuestions": "Still have questions?",
-    "contactUs": "Contact Us",
-    "contactDescription": "If you didn't find the answer you were looking for, please feel free to reach out to our support team."
+    "contact": {
+      "title": "Still have questions?",
+      "description": "Can't find what you're looking for? Contact our support team for assistance.",
+      "button": "Contact Support"
+    }
   }
 } 
