--- a/locale/zh/models.json
+++ b/locale/zh/models.json
@@ -17,10 +17,20 @@
         "newest": "最新发布"
       },
       "purposes": {
-        "video": "制作视频",
-        "image": "生成图片",
+        "all": "所有用途",
+        "video": "视频生成",
+        "image": "图像生成",
         "transcribe": "语音转文字",
-        "text": "文本生成"
+        "text": "文本生成",
+        "audio": "音频处理",
+        "3d": "3D生成"
+      },
+      "platforms": {
+        "all": "所有平台",
+        "replicate": "Replicate",
+        "huggingface": "Hugging Face",
+        "stability": "Stability AI",
+        "openai": "OpenAI"
       }
     },
     "premiumFeatures": {
@@ -45,13 +55,78 @@
         }
       },
       "cta": "升级会员"
+    },
+    "cta": {
+      "title": "准备好改变您的 AI 体验了吗？",
+      "description": "加入数千名正在使用 Model Guru 寻找完美 AI 模型的开发者和企业。立即开始，探索 AI 模型比较的强大功能。",
+      "newsletter": {
+        "title": "保持更新",
+        "description": "订阅我们的新闻通讯，获取最新的 AI 模型更新和见解",
+        "emailLabel": "电子邮箱地址",
+        "emailPlaceholder": "输入您的电子邮箱",
+        "submitButton": "立即订阅"
+      }
+    },
+    "modelCard": {
+      "date": "日期",
+      "metrics": {
+        "runs": "运行次数",
+        "likes": "点赞数"
+      },
+      "actions": {
+        "addToCompare": "加入对比"
+      },
+      "sdxl": {
+        "title": "SDXL Turbo",
+        "description": "高速高质量的图像生成模型",
+        "runs": "12.5万",
+        "likes": "4800",
+        "tags": {
+          "image": "图像生成",
+          "realtime": "实时生成"
+        }
+      },
+      "mixtral": {
+        "title": "Mixtral 8x7B",
+        "description": "强大的专家混合语言模型",
+        "runs": "8.9万",
+        "likes": "3200",
+        "tags": {
+          "text": "文本生成",
+          "llm": "大语言模型",
+          "moe": "专家混合"
+        }
+      },
+      "gpt4o": {
+        "title": "GPT-4o",
+        "description": "OpenAI 旗舰多模态模型，支持文本、音频和视觉能力",
+        "runs": "250万",
+        "likes": "9.8万",
+        "tags": {
+          "text": "文本生成",
+          "multimodal": "多模态"
+        }
+      }
     }
   },
   "modelList": {
+    "title": "探索模型",
+    "filterPlatform": "按平台筛选",
+    "filterCategory": "按类别筛选",
+    "sortBy": "排序方式",
+    "sortOptions": {
+      "newest": "添加时间 (最新)",
+      "oldest": "添加时间 (最早)",
+      "mostLikes": "最受欢迎 (点赞数)",
+      "mostRuns": "最受欢迎 (运行数)",
+      "trending": "热度指数",
+      "alphabetical": "字母顺序 (A-Z)"
+    },
+    "filteredResultsTitle": "筛选结果",
+    "filteredResultsDesc": "符合您选择条件的模型",
     "explore": "探索模型库",
     "filterByPlatform": "按平台筛选",
     "filterByCategory": "按类别筛选",
-    "sortBy": "排序方式",
     "newlyAddedTitle": "最新添加",
     "trendingTitle": "本周热门",
     "popularTitle": "本月最热",
@@ -62,5 +137,22 @@
     "viewDetails": "查看详情",
     "loadMore": "加载更多",
     "noModelsFound": "未找到符合条件的模型"
+  },
+  "features": {
+    "newModels": {
+      "title": "最新添加",
+      "description": "及时了解各大平台最新上线的模型",
+      "viewAll": "查看所有新模型"
+    },
+    "trending": {
+      "title": "本周热门",
+      "description": "根据运行次数和点赞数查看最受欢迎的模型",
+      "viewAll": "查看所有热门模型"
+    },
+    "popular": {
+      "title": "本月最热",
+      "description": "发现使用最多、评分最高的模型",
+      "viewAll": "查看所有热门模型"
+    }
   }
 } 
